Eforce - Personal Dev/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Edit Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Speciality__c</fullName>
        <label>Sub Speciality</label>
        <picklist>
            <picklistValues>
                <fullName>Vascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breast Endocrine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorectal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatobillary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral Maxilofacial Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paediatric Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truama &amp; Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thoracic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hip/knee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tumor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternal fetal medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uro/Gyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thyroid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trauma &amp; Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infertile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <label>Support Level</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Surgeries_Month__c</fullName>
        <label>Surgeries/ Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hospital</fullName>
        <active>true</active>
        <description>Represents hospital, clinic etc.</description>
        <label>Hospital</label>
    </recordTypes>
    <recordTypes>
        <fullName>IN_Hospital</fullName>
        <active>true</active>
        <description>Represents hospital, clinic etc.</description>
        <label>IN-Hospital</label>
    </recordTypes>
    <recordTypes>
        <fullName>PH_Hospital</fullName>
        <active>true</active>
        <description>Represents hospital, clinic etc.</description>
        <label>PH-Hospital</label>
    </recordTypes>
    <recordTypes>
        <fullName>SG_Hospital</fullName>
        <active>true</active>
        <description>Represents hospital, clinic etc.</description>
        <label>SG-Hospital</label>
    </recordTypes>
    <recordTypes>
        <fullName>TH_Hospital</fullName>
        <active>true</active>
        <description>Represents hospital, clinic etc.</description>
        <label>TH-Hospital</label>
    </recordTypes>
    <recordTypes>
        <fullName>VN_Hospital</fullName>
        <active>true</active>
        <description>Represents hospital, clinic etc.</description>
        <label>VN-Hospital</label>
    </recordTypes>
    <validationRules>
        <fullName>First_Name_and_Salutation</fullName>
        <active>false</active>
        <errorConditionFormula>IF( OR( RecordType.Name =&apos;Hospital&apos;,RecordType.Name =&apos;SG-Hospital&apos;,RecordType.Name = &apos;TH-Hospital&apos;,RecordType.Name = &apos;VN-Hospital&apos;,RecordType.Name =&apos;PH-Hospital&apos;,RecordType.Name  =&apos;IN-Hospital&apos; ),false,OR( ISBLANK(  First_Name__c ) , ISBLANK( Text( Salutation__c ) ) ) )</errorConditionFormula>
        <errorDisplayField>First_Name__c</errorDisplayField>
        <errorMessage>Salutation and FirstName should not be Blank.</errorMessage>
    </validationRules>
</CustomObject>